model was too big

--- a/augmented-1/index.html
+++ b/augmented-1/index.html
@@ -9,10 +9,10 @@
 		</a-assets>
 
 		<!-- Using the asset management system. -->
-		<a-obj-model src="#spinner-obj" mtl="#spinner-mtl"></a-obj-model>
+		<a-obj-model src="#spinner-obj" mtl="#spinner-mtl" scale="0.1 0.1 0.1"></a-obj-model>
 
 		<!-- Defining the URL inline. Not recommended but may be more comfortable. -->
-		<a-obj-model src="/shared-testing/augmented-1/model/spinner.obj" mtl="/shared-testing/augmented-1/model/spinner.mtl"></a-obj-model>
+		<a-obj-model src="/shared-testing/augmented-1/model/spinner.obj" mtl="/shared-testing/augmented-1/model/spinner.mtl" scale="0.1 0.1 0.1"></a-obj-model>
 
 		<a-marker-camera preset='hiro'></a-marker-camera>
 	</a-scene>
