--- a/augmented-1/index.html
+++ b/augmented-1/index.html
@@ -4,12 +4,13 @@
 <body style='margin : 0px; overflow: hidden;'>
 	<a-scene embedded arjs='sourceType: webcam;'>
 		<a-assets>
-			<a-asset-item id="SD-obj" src="/shared-testing/augmented-1/model/SD.obj"></a-asset-item>
-			<a-asset-item id="SD-mtl" src="/shared-testing/augmented-1/model/SD.mtl"></a-asset-item>
+			<a-asset-item id="nurse-obj" src="/shared-testing/augmented-1/model/nurse.obj"></a-asset-item>
+			<a-asset-item id="nurse-mtl" src="/shared-testing/augmented-1/model/nurse.mtl"></a-asset-item>
+			<a-asset-item id="nurse-max" src="/shared-testing/augmented-1/model/nurse.max"></a-asset-item>
 		</a-assets>
 
 		<!-- Using the asset management system. -->
-		<a-obj-model src="#SD-obj" mtl="#SD-mtl" scale="0.1 0.1 0.1"></a-obj-model>
+		<a-obj-model src="#nurse-obj" mtl="#nurse-mtl" max="#nurse-max" scale="0.1 0.1 0.1"></a-obj-model>
 
 		<!-- Defining the URL inline. Not recommended but may be more comfortable. -->
 		<a-obj-model src="/shared-testing/augmented-1/model/SD.obj" mtl="/shared-testing/augmented-1/model/SD.mtl" scale="0.5 0.5 0.5"></a-obj-model>
