--- a/augmented-1/index.html
+++ b/augmented-1/index.html
@@ -13,7 +13,7 @@
 		<a-obj-model src="#nurse-obj" mtl="#nurse-mtl" max="#nurse-max" scale="0.1 0.1 0.1"></a-obj-model>
 
 		<!-- Defining the URL inline. Not recommended but may be more comfortable. -->
-		<a-obj-model src="/shared-testing/augmented-1/model/SD.obj" mtl="/shared-testing/augmented-1/model/SD.mtl" scale="0.5 0.5 0.5"></a-obj-model>
+		<a-obj-model src="/shared-testing/augmented-1/model/nurse.obj" mtl="/shared-testing/augmented-1/model/nurse.mtl" max="/shared-testing/augmented-1/model/nurse.max" scale="0.5 0.5 0.5"></a-obj-model>
 
 		<a-marker-camera preset='hiro'></a-marker-camera>
 	</a-scene>
