Maybe i am being stupid

--- a/augmented-1/index.html
+++ b/augmented-1/index.html
@@ -6,14 +6,13 @@
 		<a-assets>
 			<a-asset-item id="nurse-obj" src="/shared-testing/augmented-1/model/nurse.obj"></a-asset-item>
 			<a-asset-item id="nurse-mtl" src="/shared-testing/augmented-1/model/nurse.mtl"></a-asset-item>
-			<a-asset-item id="nurse-max" src="/shared-testing/augmented-1/model/nurse.max"></a-asset-item>
 		</a-assets>
 
 		<!-- Using the asset management system. -->
-		<a-obj-model src="#nurse-obj" mtl="#nurse-mtl" max="#nurse-max" scale="0.1 0.1 0.1"></a-obj-model>
+		<a-obj-model src="#nurse-obj" mtl="#nurse-mtl" scale="0.5 0.5 0.5"></a-obj-model>
 
 		<!-- Defining the URL inline. Not recommended but may be more comfortable. -->
-		<a-obj-model src="/shared-testing/augmented-1/model/nurse.obj" mtl="/shared-testing/augmented-1/model/nurse.mtl" max="/shared-testing/augmented-1/model/nurse.max" scale="0.5 0.5 0.5"></a-obj-model>
+		<a-obj-model src="/shared-testing/augmented-1/model/nurse.obj" mtl="/shared-testing/augmented-1/model/nurse.mtl" scale="0.5 0.5 0.5"></a-obj-model>
 
 		<a-marker-camera preset='hiro'></a-marker-camera>
 	</a-scene>
