--- a/augmented-1/index.html
+++ b/augmented-1/index.html
@@ -9,10 +9,10 @@
 		</a-assets>
 
 		<!-- Using the asset management system. -->
-		<a-obj-model src="#SD-obj" mtl="#SD-mtl" scale="0.1 0.1 0.1"></a-obj-model>
+		<a-obj-model position='0 0.5 0' src="#SD-obj" mtl="#SD-mtl" scale="0.2 0.2 0.2"></a-obj-model>
 
 		<!-- Defining the URL inline. Not recommended but may be more comfortable. -->
-		<a-obj-model src="/shared-testing/augmented-1/model/SD.obj" mtl="/shared-testing/augmented-1/model/SD.mtl" scale="0.1 0.1 0.1"></a-obj-model>
+		<a-obj-model position='0 0.5 0' src="/shared-testing/augmented-1/model/SD.obj" mtl="/shared-testing/augmented-1/model/SD.mtl" scale="0.2 0.2 0.2"></a-obj-model>
 
 		<a-marker-camera preset='hiro'></a-marker-camera>
 	</a-scene>
